# job-portal-services

./: CMakeLists.txt  README.md  Requirements.txt
src/: main.cpp  main_bing.cpp  microsvc_controller.cpp  microsvc_controller.hpp
